# zvezdochka

./: .gitignore  .gitmodules  CNAME  Cargo.toml  README.md  flake.nix  zvezdochka-template.toml
.github/workflows/: .check-build.yml
src/: main.rs
src/site/: album.rs  die_linky.rs  fixup.rs  member.rs  metadata.rs  mod.rs  namemap.rs  news.rs  read.rs  sitemap.rs  util.rs  work.rs
src/site/templates/: base.rs  error.rs  index.rs  join.rs  members.rs  mod.rs  news.rs  works.rs
src/site/templates/functions/: embed.rs  member.rs  mod.rs  sns.rs
src/site/templates/partials/: footer.rs  head.rs  mod.rs  navbar.rs
