[package]
name = "zvezdochka"
version = "0.1.0"
edition = "2024"

[features]
default = []
discord = [
    "serenity",
    "poise",
    "poise_error",
    "figment2",
    "sqlx",
    "refinery",
    "process-wrap",
    "s3",
]

[dependencies]
pulldown-cmark = "0.13.3"
maud = "0.27.0"
urlencoding = "2.1.3"
camino = "1.2.2"
serde_json = "1.0"
clap = { version = "4.6.1", features = ["derive"] }
ammonia = "4.1.2"
seahash = "4.1.0"
base64 = "0.22.1"
rss = "2.0.12"
log = "0.4.29"
env_logger = "0.11.10"
lol_html = "2.7.2"
eyre = "0.6.12"
color-eyre = "0.6.5"
indexmap = "2.14.0"

[dependencies.time]
version = "0.3.47"
features = ["serde", "serde-human-readable", "macros"]

[dependencies.url]
version = "2.5.8"
features = ["serde"]

[dependencies.hauchiwa]
version = "0.18.0"
features = ["tokio", "grass", "image", "server", "sitemap"]

[dependencies.minijinja]
version = "2.19.0"
features = ["unicode", "speedups", "loader"]

[dependencies.minijinja-contrib]
version = "2.19.0"
features = ["pycompat"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

# [dependencies.reqwest]
# version = "0.13.2"
# features = ["blocking", "json", "rustls", "multipart"]
# default-features = false

# Discord Bot Dependencies
[dependencies.serenity]
version = "0.12.5"
optional = true

[dependencies.poise]
version = "0.6.1"
features = ["cache", "chrono", "handle_panics"]
optional = true

[dependencies.poise_error]
version = "1.7.1"
optional = true

[dependencies.figment2]
version = "0.11.4"
features = ["toml", "env"]
optional = true

[dependencies.sqlx]
version = "0.8.6"
features = [
    "sqlx-sqlite",
    "sqlite",
    "runtime-tokio",
    "derive",
    "tls-rustls-ring-webpki",
]
optional = true

[dependencies.refinery]
version = "0.9.0"
features = ["serde"]
optional = true

[dependencies.process-wrap]
version = "9.1.0"
features = ["tokio1", "std", "kill-on-drop"]
optional = true

[dependencies.s3]
version = "0.1.21"
features = ["async", "rustls", "multipart"]
optional = true
